...
                selectedVideo = video
            } onDelete: { video in
                videoManager.deleteVideo(video)
            } onEdit: { video in
                editedVideo = video
            }
            .navigationTitle("Your Videos")
            .toolbar {
                if isImportProgressShown {
                    ProgressView()
                }
                
                Button {
                    isImportsListShown.toggle()
                } label: {
                    Label("Import", systemImage: "arrow.down.circle")
                }
            }
            .onReceive(videoManager.importManager.$runningImports) {
                isImportProgressShown = !$0.isEmpty
            }
            .sheet(item: $editedVideo) { video in
...
